# dishka-ag2

./: .coveragerc  .gitignore  AGENTS.md  CLAUDE.md  README.md  noxfile.py  pyproject.toml  ruff.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml  pr_codeql.yaml.yml  pr_dependency_review.yml  release_pypi.yaml
examples/: ag2_agent_tool.py  ag2_app_session_request.py  ag2_dynamic_prompt.py  ag2_memory_skill.py  ag2_response_schema.py  ag2_skills.py  ag2_standalone_tool.py  ag2_standalone_tool_hitl.py  ag2_standalone_tool_hitl_arg.py  ag2_subagents.py  ag2_toolkit.py
src/dishka_ag2/: __init__.py  _compat.py  _consts.py  _container.py  _container_context.py  _context.py  _context_getter.py  _injectors.py  _middleware.py  _scope.py  _scopes.py  _types.py  _version.py  ag2.py
src/dishka_autogen/: __init__.py  _consts.py  _container.py  _injectors.py  _middleware.py  autogen.py
tests/: common.py  conftest.py
tests/integration/: conftest.py  scope_state.py  test_agent.py
tests/integration/agent_tool/: test_async.py  test_sync.py
tests/integration/dynamic_prompt/: common.py  test_async.py  test_sync.py
tests/integration/hitl/: common.py  conftest.py  test_argument.py  test_decorator.py
tests/integration/memory_skill/: common.py  test_async.py  test_sync.py
tests/integration/response_schema/: common.py  test_async.py  test_sync.py
tests/integration/skills/: common.py  conftest.py  test_async.py  test_sync.py
tests/integration/standalone_tool/: test_async.py  test_sync.py
tests/integration/subagents/: __init__.py  common.py  test_async.py  test_sync.py
tests/integration/toolkit/: common.py  test_async.py  test_sync.py
tests/unit/: conftest.py  test_errors.py  test_middleware.py
(+47 files in other folders)
